# sync

./: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml  readme.md
include/: mutex.h  semaphore.h  semaphore_spin.h  spin_lock.h
lib/: CMakeLists.txt  definitions.h  mutex.c  semaphore.c  semaphore_spin.c  spin_lock.c
tests/: CMakeLists.txt  definitions.h  main.c  mutex.c  mutex.h  semaphore.c  semaphore.h  semaphore_spin.c  semaphore_spin.h  spin_lock.c  spin_lock.h  test.c  test.h  threads.h
